feat: set isLoginForm open to false on form submit; add markup, styles and content for home greeting page

--- a/react-spa-test/src/@constants/_constants.scss
+++ b/react-spa-test/src/@constants/_constants.scss
@@ -1,5 +1,7 @@
 $layout-bg: #ffffffcc;
 $header-text: #3a63b9;
+$theme-color1: #ff7e33;
+$theme-color2: #185db8;
 
 %layout-bg-style {
   margin: 10px auto;
