--- a/react-spa-test/src/components/Home/index.scss
+++ b/react-spa-test/src/components/Home/index.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 70px 20px 20px;
+  padding: 60px 0 20px;
 }
 
 .home-info {
@@ -62,7 +62,7 @@
 
 @media(max-width: 1195px) {
   .home {
-    padding: 30px 20px;
+    padding: 30px 0;
   }
   .home-info {
     max-width: 80%;
