feat: implement add news to favorite and remove it from there, favorite news are marked with golden star

--- a/react-spa-test/src/@constants/_constants.scss
+++ b/react-spa-test/src/@constants/_constants.scss
@@ -3,6 +3,7 @@ $header-text: #3a63b9;
 $light-text:  #8d8d8d;
 $theme-color1: #ff7e33;
 $theme-color2: #185db8;
+$favorite-icon: #ffd700;
 
 %layout-bg-style {
   margin: 10px auto;
