feat: add weather page markup, styles, responsive, find user's current position, fetch and render weather for user's location

--- a/react-spa-test/src/@constants/_constants.scss
+++ b/react-spa-test/src/@constants/_constants.scss
@@ -1,9 +1,11 @@
 $layout-bg: #ffffffcc;
 $header-text: #3a63b9;
+$white: #ffffff;
 $light-text:  #8d8d8d;
 $theme-color1: #ff7e33;
 $theme-color2: #185db8;
 $favorite-icon: #ffd700;
+$bg-wrapper: #0000001a;
 
 %layout-bg-style {
   margin: 10px auto;
