--- a/react-spa-test/src/@constants/_constants.scss
+++ b/react-spa-test/src/@constants/_constants.scss
@@ -6,6 +6,8 @@ $theme-color1: #ff7e33;
 $theme-color2: #185db8;
 $favorite-icon: #ffd700;
 $bg-wrapper: #0000001a;
+$bg-tag: #ff7e334d;
+$border-tag: #ff7e33;
 
 %layout-bg-style {
   margin: 10px auto;
